# ShopifyAgent

./: .env.example  .gitignore  README.md  docker-compose.yaml  instructions.txt
.github/workflows/: ci.yml  smoke.yml
backend/: Dockerfile  README.md  celery_app.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: audit.py
extension/: README.md  background.js  manifest.json  popup.html  popup.js
frontend/: Dockerfile  README.md  package.json
frontend/public/: index.html
frontend/src/: index.js
infra/: README.md  main.tf  outputs.tf  variables.tf
ml-core/: README.md  __init__.py  audit.py  examples.ipynb  pyproject.toml
