[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cro-agent-ml-core"
version = "0.1.0"
description = "ML core heuristics engine for the CRO agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "Pillow",
]